--- a/ui_Component/ui_signin.ui
+++ b/ui_Component/ui_signin.ui
@@ -110,7 +110,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap resource="resource.qrc">:/asset/asset/bdoctor.png</pixmap>
+            <pixmap resource="../resource.qrc">:/asset/asset/bdoctor.png</pixmap>
            </property>
            <property name="scaledContents">
             <bool>true</bool>
@@ -411,6 +411,7 @@ QPushButton:pressed {
   </layout>
  </widget>
  <resources>
+  <include location="../resource.qrc"/>
   <include location="resource.qrc"/>
  </resources>
  <connections/>
