--- a/ui_Component/register/loginForm.ui
+++ b/ui_Component/register/loginForm.ui
@@ -1447,7 +1447,7 @@ QHeaderView::section:vertical
                             <string notr="true">color: rgb(255, 255, 255);</string>
                            </property>
                            <property name="text">
-                            <string>Number of year</string>
+                            <string>Year</string>
                            </property>
                           </widget>
                          </item>
